# shazam-video-

./: README.md  docker-compose.yml  manifest.json  popup.html  popup.js  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  schemas.py
app/api/: admin.py  lists.py  outreach.py  properties.py
app/compliance/: __init__.py  casl.py  license_rules.py  pipeda.py  provenance.py
app/ingestion/: __init__.py  base.py  derived_signals.py  registry.py
app/ingestion/sources/: __init__.py  ontario_tax_sales.py
app/models/: __init__.py  assessment.py  comp.py  distress.py  enums.py  instrument.py  license.py  outreach.py  ownership.py  parcel.py  property_list.py  provenance.py  user.py
app/providers/: __init__.py  assessment.py  deferred.py  title.py
app/services/: __init__.py  comps.py  outreach.py  search.py
canre_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/sample/: on_tax_sales.json
docs/: ARCHITECTURE.md  LEGAL.md
frontend/: index.html
scripts/: seed.py
tests/: conftest.py  test_api.py  test_casl.py  test_comps.py  test_ingestion.py  test_license_rules.py
